[gd_scene load_steps=41 format=3 uid="uid://bmkmj0t35mxxw"]

[ext_resource type="Texture2D" uid="uid://cm7h526ig8swg" path="res://assets/sprites/enemy-sprites/Slug-enemy.svg" id="1_4yip8"]
[ext_resource type="Script" uid="uid://b2peks1b2fn84" path="res://scripts/enemy-scripts/slug/slug.gd" id="1_mnw3t"]
[ext_resource type="PackedScene" uid="uid://ga1kg4j0ek8b" path="res://scene/UI_scenes/Enemy_healthbar.tscn" id="3_bksd1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e147q"]
atlas = ExtResource("1_4yip8")
region = Rect2(0, 644, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr466"]
atlas = ExtResource("1_4yip8")
region = Rect2(161, 644, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr3rb"]
atlas = ExtResource("1_4yip8")
region = Rect2(322, 644, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_iig7j"]
atlas = ExtResource("1_4yip8")
region = Rect2(483, 644, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbpva"]
atlas = ExtResource("1_4yip8")
region = Rect2(644, 644, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v70k"]
atlas = ExtResource("1_4yip8")
region = Rect2(805, 644, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_3makc"]
atlas = ExtResource("1_4yip8")
region = Rect2(966, 644, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc2p0"]
atlas = ExtResource("1_4yip8")
region = Rect2(1127, 644, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ogpy"]
atlas = ExtResource("1_4yip8")
region = Rect2(1288, 644, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t40i"]
atlas = ExtResource("1_4yip8")
region = Rect2(1449, 644, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_cm6m6"]
atlas = ExtResource("1_4yip8")
region = Rect2(0, 805, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_q15g8"]
atlas = ExtResource("1_4yip8")
region = Rect2(161, 805, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_loaeh"]
atlas = ExtResource("1_4yip8")
region = Rect2(322, 805, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1may"]
atlas = ExtResource("1_4yip8")
region = Rect2(483, 805, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhwai"]
atlas = ExtResource("1_4yip8")
region = Rect2(644, 805, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_amotu"]
atlas = ExtResource("1_4yip8")
region = Rect2(805, 805, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpugs"]
atlas = ExtResource("1_4yip8")
region = Rect2(966, 805, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_clwxi"]
atlas = ExtResource("1_4yip8")
region = Rect2(1127, 805, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_psc40"]
atlas = ExtResource("1_4yip8")
region = Rect2(1288, 805, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_alc3d"]
atlas = ExtResource("1_4yip8")
region = Rect2(0, 0, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cnka"]
atlas = ExtResource("1_4yip8")
region = Rect2(0, 161, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_svy1l"]
atlas = ExtResource("1_4yip8")
region = Rect2(161, 161, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_25kls"]
atlas = ExtResource("1_4yip8")
region = Rect2(322, 161, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf0hx"]
atlas = ExtResource("1_4yip8")
region = Rect2(483, 161, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_eokko"]
atlas = ExtResource("1_4yip8")
region = Rect2(644, 161, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uhhl"]
atlas = ExtResource("1_4yip8")
region = Rect2(805, 161, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_hignm"]
atlas = ExtResource("1_4yip8")
region = Rect2(966, 161, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekpad"]
atlas = ExtResource("1_4yip8")
region = Rect2(1127, 161, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wx0o"]
atlas = ExtResource("1_4yip8")
region = Rect2(0, 322, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5exd"]
atlas = ExtResource("1_4yip8")
region = Rect2(161, 322, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_bemg8"]
atlas = ExtResource("1_4yip8")
region = Rect2(322, 322, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_hn0ah"]
atlas = ExtResource("1_4yip8")
region = Rect2(483, 322, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu2ya"]
atlas = ExtResource("1_4yip8")
region = Rect2(644, 322, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf0qj"]
atlas = ExtResource("1_4yip8")
region = Rect2(805, 322, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp1ql"]
atlas = ExtResource("1_4yip8")
region = Rect2(966, 322, 161, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg3ry"]
atlas = ExtResource("1_4yip8")
region = Rect2(1127, 322, 161, 161)

[sub_resource type="SpriteFrames" id="SpriteFrames_tk01l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e147q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr466")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr3rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iig7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbpva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v70k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3makc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc2p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ogpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t40i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cm6m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q15g8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loaeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1may")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhwai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amotu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpugs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clwxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psc40")
}],
"loop": false,
"name": &"death",
"speed": 35.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_alc3d")
}],
"loop": true,
"name": &"iddle",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cnka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svy1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25kls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf0hx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eokko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uhhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hignm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekpad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wx0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5exd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bemg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hn0ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu2ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf0qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp1ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg3ry")
}],
"loop": true,
"name": &"walk",
"speed": 13.0
}]

[node name="Slug" type="CharacterBody2D"]
physics_interpolation_mode = 1
texture_filter = 4
collision_layer = 2
collision_mask = 2
script = ExtResource("1_mnw3t")

[node name="Node2D" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Node2D"]
physics_interpolation_mode = 1
z_index = 2
position = Vector2(0, 1.90476)
scale = Vector2(1.05, 1.05)
sprite_frames = SubResource("SpriteFrames_tk01l")
animation = &"walk"
frame_progress = 0.70141

[node name="RayCast2D_height" type="RayCast2D" parent="Node2D"]
position = Vector2(-93.6667, 28.3333)
target_position = Vector2(0, 60)

[node name="RayCast2D_wall" type="RayCast2D" parent="Node2D"]
position = Vector2(-55, 55)
target_position = Vector2(-120, 0)
collision_mask = 3
hit_from_inside = true

[node name="DamageArea" type="Area2D" parent="Node2D"]

[node name="CollisionPolygon2D_Hitbox" type="CollisionPolygon2D" parent="Node2D/DamageArea"]
position = Vector2(0, 65)
polygon = PackedVector2Array(-15.2381, -139.286, 0, -40.2381, 38.0952, -40.2381, 68.5714, -25, 83.8095, 5.47619, -68.5714, 5.47619, -68.5714, -25, -76.1905, -139.286)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.55
one_shot = true

[node name="Control" parent="." instance=ExtResource("3_bksd1")]
offset_left = -49.524
offset_top = -90.0
offset_right = 50.476
offset_bottom = -85.0
pivot_offset = Vector2(50, 0)

[node name="CollisionPolygon2D_collider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-45.7143, 70.4762, -60.9524, -36.1905, -30.4762, -36.1905, -7.61905, 24.7619, 0, 32.381, 30.4762, 32.381, 53.3333, 40, 68.5714, 70.4762)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.000145674, -28.5714)
scale = Vector2(11.4286, 9.90476)
